# MAFL

./: .gitattributes  LICENSE  README.md
ANDALIB_SA/: 1.19.0  Recent_UpdatedNB15.csv  preprocessing_info.json  pyproject.toml  requirements.txt
ANDALIB_SA/Federated_Learning/: SoftmaxWeight.py  client_app.py  getdist.py  helper.py  result_visualizer.py  server_app.py  task.py  utility.py
ANDALIB_SA/client_sa_metrics/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  17.json  18.json  19.json  2.json  22.json  23.json  24.json  25.json  3.json  30.json  31.json  32.json  34.json  37.json  4.json  40.json  41.json  42.json  43.json  44.json  45.json  47.json  48.json  49.json  5.json  50.json  51.json  52.json  53.json  57.json  59.json  6.json  (+32 more)
ANDALIB_SA/communication_metrics/: client_0_round_1.json  client_10_round_1.json  client_11_round_1.json  client_12_round_1.json  client_13_round_1.json  client_14_round_1.json  client_17_round_1.json  client_19_round_1.json  client_1_round_1.json  client_23_round_1.json  client_24_round_1.json  client_25_round_1.json  client_26_round_1.json  client_28_round_1.json  client_2_round_1.json  client_30_round_1.json  client_31_round_1.json  client_32_round_1.json  client_33_round_1.json  client_34_round_1.json  client_35_round_1.json  client_37_round_1.json  client_38_round_1.json  client_39_round_1.json  client_3_round_1.json  client_40_round_1.json  client_41_round_1.json  client_42_round_1.json  client_44_round_1.json  client_45_round_1.json  client_46_round_1.json  client_47_round_1.json  client_4_round_1.json  (+53 more)
(+3186 files in other folders)
